--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -20,7 +20,7 @@
                 <th scope="col"><p class="text-center">Tipo documento</p></th>
                 <!-- <th scope="col"><p class="text-center">Documento aviso</p></th> -->
                 <th scope="col"><p class="text-center">N° Fisico</p></th>
-                <th scope="col"><p class="text-center">Serie</p></th>
+                <!-- <th scope="col"><p class="text-center">Serie</p></th> -->
                 <th scope="col"><p class="text-center">Fecha documento</p></th>
                 <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
                 <th scope="col"><p class="text-center">Monto inicial</p></th>
@@ -40,10 +40,10 @@
             <tbody>
 
               <tr  ng-repeat="x in listFact"   >
-                <td><p class="text-center">{{ x.codigo_tipo_doc }}</p></td>
+                <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
                 <td><p class="text-center">{{ x.no_fisico }}</p></td>
                 <!-- <td><p class="text-center">{{ x.docu_aviso }}</p></td> -->
-                <td><p class="text-center">{{ x.serie_fisico }}</p></td>
+                <!-- <td><p class="text-center">{{ x.serie_fisico }}</p></td> -->
                 <td><p class="text-center">{{ x.fecha_documento }}</p></td>
                 <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
                 <td><p class="text-center">{{ formato(2,x.monto_inicial) }}</p></td>
@@ -91,6 +91,55 @@
           </ol>
         </nav>
         <header-client></header-client>
+
+        <div ng-show="!hasUserClient">
+          <div class="row" style="margin-bottom: 15px;">
+            <div class="col-md-12">
+              <div class="card " >
+                <div class="card-body">
+                  <h5 class="card-title">Busqueda por cliente </h5>
+                  <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-6">
+                      <!-- <label for="clientes">Busqueda por cliente</label> -->
+                      <div class="input-group mb-3">
+                        <input type="text" id="clientes"
+                        class="form-control"
+                        ng-keydown="$event.keyCode === 13 && getClientNew(true)"
+                        ng-model="nombre_cliente"
+                        placeholder="Busqueda por Cliente"
+                        aria-label="Busqueda por Cliente"
+                        aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary"  ng-click="getClientNew(true)" type="button">Buscar</button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6" ng-show="clientes.length > 0" >
+                      <div class="form-group">
+                        <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
+                        <select class="form-control" ng-model="clientIndex" id="exampleFormControlSelect1" ng-focus="clientIndex = null" ng-change="selectCLient()">
+                          <option ng-repeat="x in clientes" value="{{$index}}">{{x.nombre_cliente}}</option>
+                          <option value="" disabled selected>Seleccione un cliente</option>
+                        </select>
+                      </div>
+                    </div>
+
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div ng-if="clientIndex != null">
+            <header-client cliente="client" ></header-client>
+          </div>
+
+
+
+        </div>
+
 
       <div class="col-md-12 mt-10 mb-10">
         <div class="card " >
@@ -164,16 +213,16 @@
                     </ul>
                     <div ng-show="tabsIndex == 0"  class="">
 
-                      <table datatable="ng"  class="table table-striped table-bordered" >
+                      <table datatable="ng"  dt-options="dtOptions" class="table table-striped table-bordered" >
                         <thead>
                           <tr>
 
 
+                            <th scope="col"><p class="text-center">Tipo documento</p></th>
                             <th scope="col"><p class="text-center">N° Fisico</p></th>
                             <th scope="col"><p class="text-center">Fecha documento</p></th>
                             <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
-                            <th scope="col"><p class="text-center">Monto actual</p></th>
-                            <th scope="col"><p class="text-center">Tipo documento</p></th>
+                            <th scope="col"><p class="text-center">Saldo</p></th>
                             <!-- <th scope="col"><p class="text-center">Tipo venta</p></th>
                               <th scope="col"><p class="text-center">Monto inicial</p></th>
                               <th scope="col"><p class="text-center">Fecha ultimo pago</p></th>
@@ -190,11 +239,11 @@
                           <tbody>
 
                             <tr  ng-repeat="x in listFact"   >
+                              <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
                               <td><p class="text-center">{{ x.no_fisico }}</p></td>
                               <td><p class="text-center">{{ x.fecha_documento }}</p></td>
                               <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
                               <td><p class="text-center">{{ formato(2,x.monto_actual) }}</p></td>
-                              <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
                               <!-- <td><p class="text-center">{{ x.tipo_venta }}</p></td>
                                 <td><p class="text-center">{{ x.monto_inicial }}</p></td>
                                 <td><p class="text-center">{{ x.fecha_ultimo_pago }}</p></td>
@@ -217,7 +266,7 @@
                     </div>
 
                     <div  ng-show="tabsIndex == 1"   >
-                      <table datatable="ng"  class="table table-striped table-bordered" >
+                      <table datatable="ng"  dt-options="dtOptions" class="table table-striped table-bordered" >
                         <thead>
                           <tr>
 
