--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -18,10 +18,10 @@
       </div>
       <div class="modal-body">
 
-          <div class="alert alert-danger"  ng-show="!clienteValido && !hasUserClient" role="alert">
+          <!-- <div class="alert alert-danger"  ng-show="!clienteValido && !hasUserClient" role="alert">
             Advertencia:
             <strong>{{clientInvalidoMsg}}</strong>
-          </div>
+          </div> -->
 
           <div class="alert alert-info alert-dismissible fade show" ng-show="counter >= 1" role="alert">
             <strong>Informacion!</strong> Dispone de 15 minutos de inactividad
@@ -62,35 +62,8 @@
               <!--  END INFO CLIENTE -->
               <div ng-show="!hasUserClient">
 
-                <div class="row " ng-if="clientIndex != -1" >
-                  <div class="col-md-6">
-                    <div class="card " >
-                      <div class="card-body">
-                        <h5 class="card-title">Informacion del Cliente </h5>
-                        <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client.nombre_cliente}}</p>
-                        <p class="mb-1"><span class="text-muted">RIF: </span> {{client.docu_identif_cliente}}</p>
-                        <p class="mb-1"> <span class="text-muted">Direccion Fiscal: </span> {{client.direccion_cliente.toLowerCase()}}</p>
-                        <p class="mb-1"><span class="text-muted">Zona: </span>{{client.zona}}</p>
-                        <!-- <p class="mb-1"><span class="text-muted">Telefono: </span>{{client.telefono1}}</p> -->
-                        <!-- <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p> -->
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-
-                    <div class="card " >
-                      <div class="card-body">
-                        <h5 class="card-title">Detalles</h5>
-                        <p class="mb-1"><span class="text-muted">Codigo: </span> {{client.cod_cliente}}</p>
-                        <p class="mb-1"><span class="text-muted">Tipo de Venta: </span> {{client.tipo_venta}}</p>
-                        <p class="mb-1"><span class="text-muted">Plazo: </span> {{client.v_plazo}} dias</p>
-                        <p class="mb-1"><span class="text-muted">Limite de Credito: </span> {{formato(2,client.limite_credito)}}</p>
-                        <p class="mb-1"><span class="text-muted">Limite disponible: </span> {{formato(2,(creditoClient.disp_bs_format)? (creditoClient.disp_bs_format - totales.bsConIva):0)}}</p>
-                        <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Vendedor: </span> {{client.vendedor.toLowerCase()}}</p>
-                        <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Analista de cobranzas: </span> {{client.v_persona_cyc.toLowerCase()}}</p>
-                      </div>
-                    </div>
-                  </div>
+                <div ng-if="clientIndex != null">
+                  <header-client cliente="client" ></header-client>
                 </div>
 
               </div>
@@ -276,10 +249,6 @@
           <span class="float-right ml-3" ng-show="editView" > <strong>tiempo:</strong> {{msToTime(counter)}}</span>
           <span class="float-right"> <strong>Estatus:</strong> {{pedido.estatus}}</span>
           </div>
-          <div class="alert alert-danger"  ng-show="!clienteValido && !hasUserClient" role="alert">
-            Advertencia:
-            <strong>{{clientInvalidoMsg}}</strong>
-          </div>
 
           <div class="alert alert-info alert-dismissible fade show" ng-show="counter >= 1" role="alert">
             <strong>Informacion!</strong> Dispone de 15 minutos de inactividad
@@ -320,36 +289,10 @@
             <header-client></header-client>
             <div ng-show="!hasUserClient">
 
-              <div class="row "  >
-                <div class="col-md-6">
-                  <div class="card " >
-                    <div class="card-body">
-                      <h5 class="card-title">Informacion del Cliente </h5>
-                      <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client.nombre_cliente}}</p>
-                      <p class="mb-1"><span class="text-muted">RIF: </span> {{client.docu_identif_cliente}}</p>
-                      <p class="mb-1"> <span class="text-muted">Direccion Fiscal: </span> {{client.direccion_cliente.toLowerCase()}}</p>
-                      <p class="mb-1"><span class="text-muted">Zona: </span>{{client.zona}}</p>
-                      <!-- <p class="mb-1"><span class="text-muted">Telefono: </span>{{client.telefono1}}</p> -->
-                      <!-- <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p> -->
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6">
-
-                  <div class="card " >
-                    <div class="card-body">
-                      <h5 class="card-title">Detalles</h5>
-                      <p class="mb-1"><span class="text-muted">Codigo: </span> {{client.cod_cliente}}</p>
-                      <p class="mb-1"><span class="text-muted">Tipo de Venta: </span> {{client.tipo_venta}}</p>
-                      <p class="mb-1"><span class="text-muted">Plazo: </span> {{client.v_plazo}} dias</p>
-                      <p class="mb-1"><span class="text-muted">Limite de Credito: </span> {{formato(2,client.limite_credito)}}</p>
-                      <p class="mb-1"><span class="text-muted">Limite disponible: </span> {{formato(2,(creditoClient.disp_bs_format)? (creditoClient.disp_bs_format - totales.bsConIva):0)}}</p>
-                      <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Vendedor: </span> {{client.vendedor.toLowerCase()}}</p>
-                      <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Analista de cobranzas: </span> {{client.v_persona_cyc.toLowerCase()}}</p>
-                    </div>
-                  </div>
-                </div>
+              <div ng-if="clientIndex != null">
+                <header-client cliente="client" ></header-client>
               </div>
+
 
 
             </div>
@@ -804,8 +747,8 @@
             <li class="breadcrumb-item active" aria-current="page">Pedidos</li>
           </ol>
         </nav>
-      
-        <header-client  numero="numero"  ></header-client>
+
+        <header-client ></header-client>
 
         <div ng-show="!hasUserClient">
           <div class="row" style="margin-bottom: 15px;">
@@ -832,7 +775,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-6" ng-show="clientes.length > 0" >
                       <div class="form-group">
                         <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
-                        <select class="form-control" ng-model="clientIndex" id="exampleFormControlSelect1" ng-change="selectCLient()">
+                        <select class="form-control" ng-model="clientIndex" id="exampleFormControlSelect1" ng-focus="clientIndex = null" ng-change="selectCLient()">
                           <option ng-repeat="x in clientes" value="{{$index}}">{{x.nombre_cliente}}</option>
                           <option value="" disabled selected>Seleccione un cliente</option>
                         </select>
@@ -847,43 +790,11 @@
 
           </div>
 
-          <div class="col-md-12">
-
-            <div class="alert alert-danger"  ng-show="!clienteValido && !hasUserClient && clientInvalidoMsg != null" role="alert">
-              Advertencia:
-              <strong>{{clientInvalidoMsg}}</strong>
-            </div>
+          <div ng-if="clientIndex != null">
+            <header-client cliente="client" ></header-client>
           </div>
-          <div class="row " style="margin-bottom: 15px;" ng-if="clientIndex != null">
-            <div class="col-md-6">
-              <div class="card " >
-                <div class="card-body">
-                  <h5 class="card-title">Informacion del Cliente </h5>
-                  <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client.nombre_cliente}}</p>
-                  <p class="mb-1"><span class="text-muted">RIF: </span> {{client.docu_identif_cliente}}</p>
-                  <p class="mb-1"> <span class="text-muted">Direccion Fiscal: </span> {{client.direccion_cliente.toLowerCase()}}</p>
-                  <p class="mb-1"><span class="text-muted">Zona: </span>{{client.zona}}</p>
-                  <!-- <p class="mb-1"><span class="text-muted">Telefono: </span>{{client.telefono1}}</p> -->
-                  <!-- <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p> -->
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
 
-              <div class="card " >
-                <div class="card-body">
-                  <h5 class="card-title">Detalles</h5>
-                  <p class="mb-1"><span class="text-muted">Codigo: </span> {{client.cod_cliente}}</p>
-                  <p class="mb-1"><span class="text-muted">Tipo de Venta: </span> {{client.tipo_venta}}</p>
-                  <p class="mb-1"><span class="text-muted">Plazo: </span> {{client.v_plazo}} dias</p>
-                  <p class="mb-1"><span class="text-muted">Limite de Credito: </span> {{formato(2,client.limite_credito)}}</p>
-                  <p class="mb-1"><span class="text-muted">Limite disponible: </span> {{formato(2,(creditoClient.disp_bs_format)? (creditoClient.disp_bs_format - totales.bsConIva):0)}}</p>
-                  <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Vendedor: </span> {{client.vendedor.toLowerCase()}}</p>
-                  <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Analista de cobranzas: </span> {{client.v_persona_cyc.toLowerCase()}}</p>
-                </div>
-              </div>
-            </div>
-          </div>
+
 
         </div>
 
