--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -7,7 +7,7 @@
             </a>
         </li>
         <li>
-            <a href="#!/home"><i class="fa fa-fw fa-home"></i> Home</a>
+            <a href="#!/home"><i class="fa fa-fw fa-home"></i> Inicio</a>
         </li>
         <li>
           <a href="#!/deuda" class=""><i class="fa fa-fw  fas fa-receipt" ></i>Deuda</a>
