--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -142,20 +142,74 @@
 <div id="wrapper" class="toggled">
   <my-sidebar></my-sidebar>
   <div id="page-content-wrapper" class="container-fluid">
-    <div class="row" style="min-height:80vh">
 
-      <div class="col-md-12 col-sm-12">
-        <br>
-        <h5 class="text-center"> <strong>USUARIOS</strong> </h5>
-        <br>
+
+        <div class="col-md-12 col-sm-12">
+          <nav aria-label="breadcrumb" role="navigation">
+            <ol class="breadcrumb m-0">
+              <li class="breadcrumb-item"><a class="text-success" >servidor.com</a></li>
+              <li class="breadcrumb-item"><a class="text-info" href="#!/home">Inicio</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Usuarios</li>
+            </ol>
+          </nav>
+    <header-client></header-client>
+
+    <div ng-show="!hasUserClient">
+      <div class="row" style="margin-bottom: 15px;">
+        <div class="col-md-12">
+          <div class="card " >
+            <div class="card-body">
+              <h5 class="card-title">Busqueda por cliente </h5>
+              <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                  <!-- <label for="clientes">Busqueda por cliente</label> -->
+                  <div class="input-group mb-3">
+                    <input type="text" id="clientes"
+                    class="form-control"
+                    ng-keydown="$event.keyCode === 13 && getClientNew(true)"
+                    ng-model="nombre_cliente"
+                    placeholder="Busqueda por Cliente"
+                    aria-label="Busqueda por Cliente"
+                    aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                      <button class="btn btn-outline-secondary"  ng-click="getClientNew(true)" type="button">Buscar</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-6" ng-show="clientes.length > 0" >
+                  <div class="form-group">
+                    <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
+                    <select class="form-control" ng-model="clientIndex" id="exampleFormControlSelect1" ng-focus="clientIndex = null" ng-change="selectCLient()">
+                      <option ng-repeat="x in clientes" value="{{$index}}">{{x.nombre_cliente}}</option>
+                      <option value="" disabled selected>Seleccione un cliente</option>
+                    </select>
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div ng-if="clientIndex != null">
+        <header-client cliente="client" ></header-client>
+      </div>
+
+
+
+    </div>
+
         <button class="btn btn-primary" style="font-weight: bold;margin-bottom: 1rem;" data-toggle="modal" data-target="#addUserModal"> <i class="fas fa-pencil"></i> CREAR USUARIO <i class="fas fa-1x fa-user"></i></button>
 
 
 
         <div class="row">
           <div class="col-md-12">
-           <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
-  			</table>
+           <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
+  			</table> -->
 
 
                           <table datatable="ng" dt-options="dtOptions"  class="table table-striped table-bordered" >
@@ -163,6 +217,8 @@
                               <tr>
                                 <th scope="col"><p class="text-center">#</p></th>
                                 <th scope="col"><p class="text-center">Usuario</p></th>
+                                <th scope="col"><p class="text-center">Nombre</p></th>
+                                <th scope="col"><p class="text-center">Tipo</p></th>
                                 <th scope="col"><p class="text-center">Estatus</p></th>
 
                                 <!-- <th scope="col"><p class="text-center">Nombre vendedor</p></th> -->
@@ -172,10 +228,13 @@
                             </thead>
                             <tbody>
 
-                              <tr  ng-repeat="fact in facturas"  >
+                              <tr  ng-repeat="x in usuarios"  >
                                 <td><p class="text-center">{{ $index + 1 }}</p></td>
-                                <td><p class="text-center">{{ fact }}</p></td>
-                                <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
+                                <td><p class="text-center">{{ x.username }}</p></td>
+                                <td><p class="text-center">{{ x.name }}</p></td>
+                                <td><p class="text-center">{{ x.role }}</p></td>
+                                <td><p class="text-center">{{ x.status }}</p></td>
+
 
                                 <!-- <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td> -->
                                 <!-- <td><p class="text-center">{{  facturasList[fact][0].email_vendedor }}</p></td> -->
@@ -193,7 +252,6 @@
         </div>
 
       </div>
-    </div>
 
   </div>
 </div>
