--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -164,12 +164,17 @@
 
     </div>
 
-        <button class="btn btn-primary" style="font-weight: bold;margin-bottom: 1rem;" data-toggle="modal" data-target="#addUserModal"> <i class="fas fa-pencil"></i> CREAR USUARIO <i class="fas fa-1x fa-user"></i></button>
 
+    <div class="col-md-12 mt-10 mb-10">
+      <div class="card " >
+        <div class="card-body">
+          <div class="row">
+            <div class="col-md-12">
 
+              <button class="btn btn-primary" style="font-weight: bold;margin-bottom: 1rem;" data-toggle="modal" data-target="#addUserModal"> <i class="fas fa-pencil"></i> CREAR USUARIO <i class="fas fa-1x fa-user"></i></button>
 
-        <div class="row">
-          <div class="col-md-12">
+              <div class="row">
+                <div class="col-md-12">
 
                   <table datatable="ng" dt-options="dtOptions"  class="table table-striped table-bordered" >
                     <thead>
@@ -206,9 +211,18 @@
                     </tbody>
                   </table>
 
-          </div>
+                </div>
 
+              </div>
+
+            </div>
+
+          </div>
         </div>
+        </div>
+    </div>
+
+
 
       </div>
 
