--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -82,7 +82,7 @@
                   </div>
                 </td>
                 <td>
-                  <div class="form-check" ng-if >
+                  <div class="form-check"  >
                     <input type="checkbox" class="form-check-input" ng-model="permisos[x].crear" ng-disabled="hasOwnProp(x,crear)" >
                   </div>
                 </td>
