--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -56,7 +56,7 @@
                 <th scope="row">{{x}}</th>
                 <td>
                   <div class="form-check" >
-                    <input type="checkbox" class="form-check-input" ng-model="permisos[x].ver" ng-disabled="!hasOwnProp('cliente',ver)"  >
+                    <input type="checkbox" class="form-check-input" ng-model="permisos[x].ver" ng-disabled="!hasOwnProp(x,ver)"  >
                   </div>
                 </td>
                 <td>
