--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -8,7 +8,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
-        <h5 class="modal-title" id="addUserModalLabel">CREAR USUARIO <i class="fas fa-1x fa-user"></i> </h5>
+        <h5 class="modal-title" id="addUserModalLabel">{{ modalTitle }} <i class="fas fa-1x fa-user"></i> </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
