--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -522,8 +522,9 @@
 
             <div class="col-sm-12 col-md-12 col-lg-12">
               <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="infoPsico = true;" ng-show="!infoPsico"  > <i class="fa fa-info"></i> Requisitos para Psicotropicos</button>
+
               <label for="clientes">Busqueda por producto</label>
-              <div class="input-group mb-3">
+              <div class="input-group mb-3 ">
                 <input type="text" class="form-control"
                 ng-model="busqueda_prod"
                 ng-keydown="$event.keyCode === 13 && getProdNew(true)"
@@ -532,6 +533,17 @@
                 aria-describedby="basic-addon2">
                 <div class="input-group-append">
                   <button class="btn btn-outline-secondary"   ng-click="getProdNew(true)" type="button">Buscar</button>
+                </div>
+              </div>
+
+              <label for="proveedor">Filtrar por proveedor</label>
+              <div class="input-group mb-3 ">
+                <div class="form-group">
+                  <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
+                  <select class="form-control" ng-model="proveedor.cod_proveedor" id="exampleFormControlSelect2" >
+                    <option ng-repeat="x in listProveedores" value="{{x.cod_proveedor}}">{{x.nombre_proveedor}}</option>
+                    <option value="" disabled selected>Seleccione un proveedor</option>
+                  </select>
                 </div>
               </div>
 
