--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -541,6 +541,7 @@
                 <div class="form-group">
                   <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
                   <select class="form-control" ng-model="proveedor.cod_proveedor" id="exampleFormControlSelect2" >
+                    <option value="null" disabled selected>todos</option>
                     <option ng-repeat="x in listProveedores" value="{{x.cod_proveedor}}">{{x.nombre_proveedor}}</option>
                     <option value="" disabled selected>Seleccione un proveedor</option>
                   </select>
