--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -554,6 +554,7 @@
                   <thead>
                       <tr>
                       <th scope="col"><p class="text-center">#</p></th>
+                      <th scope="col"><p class="text-center">Opciones</p></th>
                       <th scope="col"><p class="text-center">Nombre Producto</p></th>
                       <th scope="col"><p class="text-center">Categoria</p></th>
                       <th scope="col"><p class="text-center">Existencia</p></th>
@@ -567,9 +568,10 @@
                   </thead>
                   <tbody>
                     <a href="#infoProduct">
-                      <tr ng-repeat="x in productos" ng-click="selectProduct($index)" ng-class="{ selectedRow : $index == productIndex }" >
+                      <tr ng-repeat="x in productos"  ng-class="{ selectedRow : $index == productIndex }" >
 
                           <td><p class="text-center">{{ $index + 1 }}</p></td>
+                          <td><i class="fa fa-eye" style="cursor: pointer;"  ng-click="selectProduct($index)" data-toggle="modal" data-target="#showPedidoModal"  ></i></td>
                           <td><p class="text-center">{{ x.nombre_producto }}</p></td>
                           <td><p class="text-center">{{ x.categoria }}</p></td>
                           <td><p class="text-center">{{ x.existencia }}</p></td>
@@ -616,7 +618,7 @@
 
         <div class="container">
           <div class="row pb-2 p-2" >
-              <div class="col-md-6">
+              <div class="col-md-4">
                 <p class="font-weight-bold mb-4">Informacion</p>
                 <p class="mb-1"><span class="text-muted">Principal Activo: </span> {{articulo.princ_activo}}</p>
                 <p class="mb-1"><span class="text-muted">Codigo: </span> {{articulo.cod_producto}}</p>
@@ -624,14 +626,25 @@
                 <p class="mb-1"><span class="text-muted">Proveedor: </span> {{articulo.proveedor}}</p>
               </div>
 
-              <div class="col-md-6 ">
+              <div class="col-md-4 ">
                   <p class="font-weight-bold mb-4">Detalles</p>
 
                   <p class="mb-1"><span class="text-muted">Regulado: </span> {{articulo.ind_regulado}}</p>
                   <p class="mb-1"><span class="text-muted">Impuesto: </span> {{articulo.ind_impuesto}}</p>
                   <p class="mb-1"><span class="text-muted">Psicotropico: </span> {{articulo.ind_psicotropico}}</p>
                   <p class="mb-1"><span class="text-muted">Existencia: </span> {{articulo.existencia}}</p>
+
               </div>
+
+              <div class="col-md-4 ">
+                  <p class="font-weight-bold mb-4">Otros</p>
+
+                  <p class="mb-1"><span class="text-muted">Categoria: </span> {{articulo.categoria}}</p>
+                  <p class="mb-1"><span class="text-muted">Descuento 1: </span> {{articulo.descuento1}}</p>
+                  <p class="mb-1"><span class="text-muted">Descuento 2: </span> {{articulo.descuento2}}</p>
+
+              </div>
+
           </div>
 
           <div id="infoProduct" class="row" >
