--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -49,13 +49,16 @@
           <div class="card-body  collapse " id="collapseDetalle" >
 
             <!-- <h6 class="card-title">Detalles del Cliente</h6> -->
-            <p class="mb-1"><span class="text-muted">Codigo: </span> {{client_info.cod_cliente}}</p>
+            <p class="mb-1"><span class="text-muted"> Código {{ (client_info.grupo_cliente == "02") ?  "de empleado":"" }} </span> {{client_info.cod_cliente}}</p>
+            <p class="mb-1" ng-if="client_info.grupo_cliente =='02'" ><span class="text-muted"> Nombre empleado</span> {{client_info.cod_cliente}}</p>
             <p class="mb-1"><span class="text-muted">Tipo de Venta: </span> {{client_info.tipo_venta}}</p>
             <p class="mb-1"><span class="text-muted">Plazo: </span> {{client_info.v_plazo}} dias</p>
             <p class="mb-1"><span class="text-muted">Limite de Credito: </span> {{formato(2,client_info.limite_credito)}}</p>
             <p class="mb-1"><span class="text-muted">Limite disponible: </span> {{formato(2,creditoClient)}}</p>
-            <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Vendedor: </span> {{client_info.vendedor.toLowerCase()}}</p>
-            <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Analista de cobranzas: </span> {{client_info.v_persona_cyc.toLowerCase()}}</p>
+            <p class="mb-1"><span class="text-muted" ng-if="client_info.grupo_cliente == '02'" >Total unidades facturadas del mes: </span> {{client_info.unid_fact_med_emp}}</p>
+            <p class="mb-1"><span class="text-muted" ng-if="client_info.grupo_cliente == '02'" >Saldo en unidades: </span> {{client_info.unid_disp_med_emp}}</p>
+            <p class="mb-1" style="text-transform: capitalize;"  ng-if="client_info.grupo_cliente != '02'"  ><span class="text-muted">Vendedor: </span> {{client_info.vendedor.toLowerCase()}}</p>
+            <p class="mb-1" style="text-transform: capitalize;" ng-if="client_info.grupo_cliente != '02'" ><span class="text-muted">Analista de cobranzas: </span> {{client_info.v_persona_cyc.toLowerCase()}}</p>
           </div>
         </div>
       </div>
