--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -136,7 +136,7 @@
 
 
               <div class="form-group" >
-                <table class="table">
+                <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptionsDetalil">
                     <thead>
                         <tr>
                         <!-- <th scope="col"><p class="text-center">#</p></th> -->
@@ -363,7 +363,7 @@
 
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
 
-                  <table class="table">
+                  <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptionsDetalil">
                       <thead>
                           <tr>
                           <!-- <th scope="col"><p class="text-center">#</p></th> -->
