--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -18,7 +18,7 @@
           <thead>
             <tr>
                 <th scope="col"><p class="text-center">Tipo documento</p></th>
-                <!-- <th scope="col"><p class="text-center">Documento aviso</p></th> -->
+                <th scope="col"><p class="text-center">Documento</p></th>
                 <th scope="col"><p class="text-center">N° aviso</p></th>
                 <!-- <th scope="col"><p class="text-center">Serie</p></th> -->
                 <th scope="col"><p class="text-center">Fecha documento</p></th>
@@ -41,8 +41,8 @@
 
               <tr  ng-repeat="x in listFact"   >
                 <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
+                <td><p class="text-center">{{ x.docu_aviso }}</p></td>
                 <td><p class="text-center">{{ x.no_fisico }}</p></td>
-                <!-- <td><p class="text-center">{{ x.docu_aviso }}</p></td> -->
                 <!-- <td><p class="text-center">{{ x.serie_fisico }}</p></td> -->
                 <td><p class="text-center">{{ x.fecha_documento }}</p></td>
                 <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
